# gpu-inference-workbench

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
docs/: kubernetes-roadmap.md  runtime-notes.md  single-gpu.md
docs/experiments/: dense-vs-moe.md
docs/reports/: dense-phi2-infra-debug.md  dense-phi2-long-summary.md  dense-phi2-multi-agent-c1.md  dense-phi2-multi-agent-c4.md  dense-phi2-support-agent.md  report-template.md  smoke-tiny-gpt2.md
docs/reports/phi-2/context-sweep/: long-context-1024.md  long-context-2048.md  long-context-512.md  summary.md
docs/reports/phi-2/multi-agent-concurrency/: c2.md  c8.md  summary.md
k8s/: deployment.yaml  service.yaml
scripts/: benchmark_http.py
src/llm_perf_lab/: __init__.py  app.py  config.py  runtime.py
triton/: README.md
