[project]
name = "gpu-inference-workbench"
version = "0.1.0"
description = "A personal workbench for applied AI inference benchmarking, GPU performance, and serving systems."
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.0",
  "torch>=2.3.0",
  "transformers>=4.41.0",
  "accelerate>=0.30.0",
  "httpx>=0.27.0",
  "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.4.0",
  "pytest>=8.2.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"
